--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Avernell Christopher</h1>
             <h2>Junior FrontEnd Web Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://resume.io/r/q3DR45PY2" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
