--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                      I am a classically trained Musician and an English Teacher for more than 10 years of professional experience.Web Development has become my new passion and I am seeking a career change in this field. I am driven, a fast learner and have built my online  <a href="www.avienglish.com"><span>English website</span></a> using WordPress.I enjoy building landing pages, websites and web applications.
+                      I am a classically trained Musician and an English Teacher for more than 10 years of professional experience.Web Development has become my new passion and I am seeking a career change in this field. I enjoy building landing pages, websites and data analytics.
                     </p>
                 </div>
             </div>
