--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Avernell Christopher</h1>
+            <h1>Avernell Christopher - Melikhov</h1>
             <h2>Junior FrontEnd Web Developer</h2>
             <a href="https://resume.io/r/q3DR45PY2" class="btn-rounded-white">Download Resume</a>
         </div>
