--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Avernell Christopher</h1>
-            <h2>Junior FrontEnd Web Developer</h2>
+            <h2>Avernell Christopher-Melikhov</h2>
+            <h3>Junior FrontEnd Web Developer</h3>
             <a href="https://resume.io/r/q3DR45PY2" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -74,7 +74,7 @@
                 <div class="col-md-8">
                     <p>A passionate career transitioner into the tech field, with a robust blend of creative and analytical skills. 
 I am self-motivated, hardworking, enthusiastic. Bringing forth a positive attitude to the team, and the ability to work well with others. 
- am dedicated to improving my skills to a professional level to further enhance the mission of the company.I enjoy building landing pages, websites and analyzing data.
+ I am dedicated to improving my skills to a professional level to further enhance the mission of the company.I enjoy building landing pages, websites and analyzing data.
                     </p>
                 </div>
             </div>
@@ -97,7 +97,7 @@ I am self-motivated, hardworking, enthusiastic. Bringing forth a positive attitu
                 <h3>Self taught developer and Computer Science Student </h3>
                 <p>
                  Expanding my knowlege in Computer Science field.
-	         I Design and implement front-end interfaces to develop web applications.
+	         I design and implement front-end interfaces to develop web applications.
                 </p>
             </div>
 
@@ -118,9 +118,9 @@ I am self-motivated, hardworking, enthusiastic. Bringing forth a positive attitu
         </div>
 
 	<div class="education-block">
-            <h3>Tree house course</h3>
+            <h3>Treehouse</h3>
             <span class="education-date">2022 - 2023</span>
-            <h4>Data Analytics</h4>
+            <h4>Techdegree in Data Analysis</h4>
             <p>
               
             </p>
