--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>A passionate career transitioner into the tech field, with a robust blend of creative and analytical skills. 
-I am self-motivated, hardworking, enthusiastic. Bringing forth a positive attitude to the team, and the ability to work well with others. 
+I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitude to the team, and the ability to work well with others. 
  I am dedicated to improving my skills to a professional level to further enhance the mission of the company.I enjoy building landing pages, websites and analyzing data.
                     </p>
                 </div>
@@ -89,14 +89,16 @@ I am self-motivated, hardworking, enthusiastic. Bringing forth a positive attitu
                 <h3>Native English Insitute</h3>
                 <h4>Online Teacher</h4>
                 <p>
-                  Used pre-written curriculum to teach students English  through remote video platforms.
+                 Executed comprehensive lesson plans catering to diverse proficiency levels and learning styles.
+
+                 Tailored teaching methods to address individual student needs,considering cultural backgrounds and learning preferences.
                 </p>
             </div>
 
             <div data-date="September 2020 – Present">
                 <h3>Self taught developer and Computer Science Student </h3>
                 <p>
-                 Expanding my knowlege in Computer Science field.
+                 Expanding my knowlege in the Computer Science field.
 	         I design and implement front-end interfaces to develop web applications.
                 </p>
             </div>
