--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
                  Tailored teaching methods to address individual student needs,considering cultural backgrounds and learning preferences.
                 </p>
             </div>
-
+        <div id="experience-timeline">
             <div data-date="September 2020 – Present">
                 <h3>Self taught developer and Computer Science Student </h3>
                 <p>
