--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
 
         <div class="education-block">
             <h3>Self-Taught FrontEnd Web Developer</h3>
-            <span class="education-date"> </span>
+            <span class="education-date">2020 - Present </span>
             <h4> </h4>
             <ul>
                 <li>
