--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
             <div data-date="September 2020 – Present">
                 <h3>Self taught developer and Computer Science Student </h3>
                 <p>
-                 Expanding my knowlege in the Computer Science field.
-	         I design and implement front-end interfaces to develop web applications.
+                 Expanding my knowlege in the Computer Science field. I design and implement front-end interfaces to develop web applications.
                 </p>
             </div>
 
