--- a/index.html
+++ b/index.html
@@ -82,29 +82,27 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
     </div>
     <!-- End #about -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="February 2021 – Present">
-                <h3>Native English Insitute</h3>
-                <h4>Online Teacher</h4>
-                <p>
-                 Executed comprehensive lesson plans catering to diverse proficiency levels and learning styles.
-
-                 Tailored teaching methods to address individual student needs,considering cultural backgrounds and learning preferences.
-                </p>
-            </div>
+  <div id="experience" class="background-alt">
+    <h2 class="heading">Experience</h2>
+    <div id="experience-timeline">
+        <div data-date="February 2021 – Present">
+            <h3>Native English Institute</h3>
+            <h4>Online Teacher</h4>
+            <p>
+                Executed comprehensive lesson plans catering to diverse proficiency levels and learning styles.
+                Tailored teaching methods to address individual student needs, considering cultural backgrounds and learning preferences.
+            </p>
+        </div>
         
-            <div data-date="September 2020 – Present">
-                <h3>Self taught developer and Computer Science Student </h3>
-                <p>
-                 Expanding my knowlege in the Computer Science field. I design and implement front-end interfaces to develop web applications.
-                </p>
-            </div>
-
-
+        <div data-date="September 2020 – Present">
+            <h3>Self-taught Developer and Computer Science Student</h3>
+            <p>
+                Expanding my knowledge in the Computer Science field. I design and implement front-end interfaces to develop web applications.
+            </p>
         </div>
     </div>
+</div>
+
     <!-- End #experience -->
 
     <div id="education">
