--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of the People</h3>
-            <span class="education-date">Feb 2024</span>
+            <span class="education-date">Feb 2024 - Present</span>
             <h4>Bachelor's Degree in Computer Science</h4>
             <p>
               
