--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Avernell Christopher-Melikhov</h1>
+            <h1>Avernell Christopher</h1>
             <h2>Junior FrontEnd Web Developer</h2>
             <a href="https://resume.io/r/q3DR45PY2" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -132,7 +132,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
             <h4> </h4>
             <ul>
                 <li>
-                      Self Taught Web Developer through online courses and web documentation.
+                    Self Taught Web Developer through online courses and web documentation.
                 </li>
 
             </ul>
@@ -214,7 +214,7 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> Avernell Christopher
+                        Copyright &copy; <span id="current-year">2024</span> Avernell Christopher
                     </p>
                 </div>
                 <div class="col-sm-2 top">
