--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ I am self-motivated, hardworking, enthusiastic, bringing forth a positive attitu
         <div class="education-block">
             <h3>Self-Taught FrontEnd Web Developer</h3>
             <span class="education-date">2020 - Present </span>
-            <h4> </h4>
+            <h4> Self Taught Web Developer through online courses and web documentation.</h4>
             <ul>
                 <li>
-                    Self Taught Web Developer through online courses and web documentation.
+                    
                 </li>
 
             </ul>
